# meta-tv-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Rocket.toml  Trunk.toml  compose.prod.yml  compose.yml  flake.nix  job.nomad.hcl  shell.nix
crates/backend/: Cargo.toml
crates/backend/src/: cached_file.rs  error.rs  files.rs  lib.rs  main.rs  pool.rs  scheduler.rs  session.rs  test_utils.rs
crates/backend/src/auth/: hive.rs  mod.rs  oidc.rs
crates/backend/src/guards/: scheme.rs
crates/backend/src/routes/: auth.rs  content.rs  health.rs  mod.rs  screen.rs  screen_feed.rs  slide.rs  slide_group.rs
crates/common/: Cargo.toml
crates/common/src/: dtos.rs
crates/entity/: Cargo.toml
crates/entity/src/: content.rs  lib.rs  prelude.rs  screen.rs  sea_orm_active_enums.rs  slide.rs  slide_group.rs
crates/frontend/: Cargo.toml  Trunk.dev.toml  Trunk.toml  index.html  tailwind.config.js
crates/frontend/public/: styles.css  update_daisyui.sh
crates/frontend/src/: context.rs  lib.rs  main.rs
crates/frontend/src/api/: mod.rs
crates/frontend/src/components/: alert.rs  content.rs  dialog.rs  error.rs  feed.rs  layout.rs  mod.rs  owner_select.rs  rules_body.rs  slide.rs  slide_group.rs  slide_group_options.rs  start_end_date_fieldset.rs  start_end_date_input.rs  topbar.rs  utils.rs
crates/frontend/src/pages/: create_slide_group.rs  home.rs  mod.rs  screen_feed.rs  slide_group.rs
crates/frontend/src/utils/: bool.rs  datetime.rs  dom_id.rs  edit_slide_group.rs  mod.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250206_144027_create_slides_tables.rs  m20250213_173223_add_published_slide_group.rs  m20260317_000001_make_content_slide_nullable.rs  main.rs
