[package]
name = "meta-tv-rs"
version.workspace = true
edition.workspace = true
default-run = "meta-tv-rs"

[dependencies]
anyhow = "1.0.95"
common = { path = "../common", features = ["entity"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sea-orm = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
sea-orm-rocket = "0.5.5"
thiserror = "2.0.11"
