[package]
name = "meta-tv-rs"
version.workspace = true
edition.workspace = true
default-run = "meta-tv-rs"

[dependencies]
chrono = "0.4.40"
common = { path = "../common", features = ["entity"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
openidconnect = { version = "4.0.0", features = ["timing-resistant-secret-traits"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
sea-orm = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
sea-orm-rocket = "0.5.5"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
tempfile = "3.17.1"
thiserror = "2.0.11"
