[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
entity = { path = "../entity", optional = true }
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = []
entity = ["dep:entity"]
