[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
entity = { path = "../entity", optional = true }
serde = { version = "1.0.217", features = ["derive"] }

[features]
default = []
entity = ["dep:entity"]
