[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common", features = ["entity"] }
leptos = { version = "0.8.0-beta", features = ["csr"] }
leptos_meta = { version = "0.8.0-beta" }
leptos_router = { version = "0.8.0-beta" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6.0"
thiserror = "2.0.12"
chrono = "0.4.40"
web-sys = { version = "0.3", features = ["Blob", "File", "FileList", "FormData", "HtmlInputElement"] }
serde_json = "1.0.140"
leptos-use = { version = "0.16.0-beta", default-features = false, features = ["use_event_source"] }
codee = { version = "0.3.0", features = ["json_serde"] }
gloo-timers = "0.3.0"
leptos_icons = { git = "https://github.com/bicarlsen/leptos-icons.git", branch="leptos-0.8" }
icondata = { version = "0.5.0", default-features = false, features = ["material-design-icons"] }
icondata_core = "0.1.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
