[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common", features = ["entity"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6.0"
thiserror = "2.0.12"
chrono = "0.4.40"
web-sys = { version = "0.3", features = ["Blob", "File", "FileList", "FormData", "HtmlInputElement"] }
serde_json = "1.0.140"
leptos-use = { version = "0.16.0-beta2", default-features = false, features = ["use_event_source"] }
codee = { version = "0.3.0", features = ["json_serde"] }
gloo-timers = "0.3.0"
leptos_icons = "0.6.1"
icondata = { version = "0.5.0", default-features = false, features = ["material-design-icons"] }
icondata_core = "0.1.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }
