[package]
name = "migration"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
rocket = "0.5.1"

[dependencies.sea-orm-migration]
version = "1.1.4"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

